# NimC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NimC.g4  README.md  cmake_install.cmake  generate_reserved_word_lexer.nim  numeric_literals.txt  operators.txt  reserved_words.g4
test/: test.nim
